fix form margin on mobile

--- a/src/components/contact-form/contact-form.scss
+++ b/src/components/contact-form/contact-form.scss
@@ -1,11 +1,10 @@
 @import '../../variables.scss';
 
 .contact-form-container {
-  padding: 25px;
+  padding: 25px 0;
   margin: 0;
   width: 100%;
   background-color: $white;
-  // border: solid red 1px;
 
   .contact-form {
     // border: solid blue 1px;
